@@ -7,6 +7,10 @@
  * doc/geany.txt, doc/geany.html:
    Add note to restart Geany after installing/updating before editing
    hidden prefs.
+ * src/ui_utils.h, src/main.c, src/ui_utils.c:
+   Use Stash to save statusbar_template setting, instead of the
+   load/save-settings signal.
+   Add ui_init_prefs().
 
 
 2010-07-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
